k8s/oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy-l-ziz-cx
  name: oauth2-proxy-l-ziz-cx
  namespace: ziz
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-l-ziz-cx
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-l-ziz-cx
    spec:
      containers:
      - args:
        - --email-domain=aselford.dev
        - --provider=azure
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --pass-authorization-header=true
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy-l-ziz-cx
  name: oauth2-proxy-l-ziz-cx
  namespace: ziz
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy-l-ziz-cx
